--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #fff;
+  /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
